--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GitHubListApi">
-        <activity android:name=".detail.RepositoriesActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".profileuser.ProfileActivity"></activity>
+        <activity android:name=".userlist.UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
